# Aureo

./: .replit  INSTRUCCIONES_INSTALACION.md  README.md  WINDOWS_README.md  addCountryColumn.ts  add_interesado_column.ts  add_interesado_column_fix.ts  add_interesado_column_sqlite.ts  convert_to_excel.js  cookie.txt  crear_distribucion.py  download.py  fixSuperAdmin.mjs  fix_routes.js  guia-usuario.md  hashPassword.js  hashPassword.mjs  new_routes.ts  package-lock.json  package.json  pyproject.toml  replit.nix  resetSuperAdmin.js  resetSuperAdmin.mjs  start.bat  start_windows.bat  start_windows.js  start_windows.ps1  temp_search.js  test_excel.xlsx  test_import.csv  updateAPI.ts  updateDatabase.ts  updateInteresado.ts  updateSchema.ts  updateTablesInteresado.ts  update_coincidencias_api.ts  update_coincidencias_interesado.ts  update_excel_data_schema.sql  update_storage_coincidencias.ts
attached_assets/: Pasted--2025-04-05-12-26-05-186-werkzeug-WARNING-Debugger-is-active-2025--1743848852611.txt  Pasted--Installing-build-dependencies-error-error-subprocess-exited-with-error-pip-subproces-1743767169672.txt  Pasted-Error-initializing-database-SqliteError-no-such-table-users-at-Database-prepare-C-Aureo-no-1743023663881.txt  Pasted-Modo-depuraci-n-Activado-Serving-Flask-app-app-Debug-mode-on-20-1743849440571.txt  Pasted-PS-C-Aureo-npx-tsx-server-setupDb-ts-C-Aureo-node-modules-src-sqlite-core-session-ts-148--1743023836784.txt  Pasted-PS-D-Aureo-01-Aureo-01-python-start-py-Traceback-most-recent-call-last-File-D-Aureo-01-Au-1743332249448.txt  (+3 more)
aureo-distribuible-v2/: README.md  (+3 more)
(+152 files in other folders)
