[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chardet==5.2.0",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "flask-login==0.6.2",
    "flask-session==0.5.0",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==21.2.0",
    "jellyfish>=1.1.3",
    "openpyxl==3.1.2",
    "pandas==2.1.2",
    "pdfplumber==0.10.3",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.0",
    "python-pdf>=0.40",
    "watchdog==3.0.0",
    "werkzeug==2.3.7",
    "xlrd>=2.0.1",
]
